# mxtop-fork

./: README.md  RELEASE.md  pyproject.toml  setup.py
mxtop/: __init__.py  keyboard.py  mxtop.py  parsers.py  system_info.py  ui.py  updater.py  utils.py
tests/: test_mxtop.py  test_parsers.py  test_system_info.py  test_updater.py  test_utils.py
