[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mxtop"
version = "0.1.0"
description = "Performance monitoring CLI tool for Apple Silicon"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mxtop", "apple silicon", "monitor"]
authors = [
    { name = "Willem Adnet", email = "adnet.willem@icloud.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]
dependencies = [
    "dashing>=0.1.0",
    "psutil>=7.2.2",
]

[project.urls]
Repository = "https://github.com/Vlor999/mxtop"

[project.scripts]
mxtop = "mxtop.mxtop:main"

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "setuptools>=82.0.0",
]
